done with the layout

--- a/deliverable1.html
+++ b/deliverable1.html
@@ -2,7 +2,7 @@
 <html>
     <header>
         <meta charset="utf-8"/>
-        <title>Nul Meting</title> 
+        <title>Nulmeting</title> 
     </header>
     <body>
         <section class="nav">
