--- a/deliverable1.html
+++ b/deliverable1.html
@@ -59,7 +59,7 @@
                 <input class="input__text" type="text" name="input4">
                 <input class="input__text" type="text" name="input5">
                 <input class="input__text" type="text" name="input6">
-                <input class="input__check" type="checkbox" name="check">Lorem <u>ipsum dolor</u> sit amer
+                <input class="input__check" type="checkbox" name="check">Lorem <u>ipsum dolor</u> sit amet
                 <input class="input__submit" type="submit" name="submit">
             </section>
         </div>
