changed header to head

--- a/deliverable1.html
+++ b/deliverable1.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <header>
+    <head>
         <meta charset="utf-8"/>
         <title>Nulmeting</title> 
-    </header>
+    </head>
     <body>
         <div class="wrapper">
             <section class="nav">
