resolve merge conflict

--- a/deliverable2.html
+++ b/deliverable2.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8"/>
         <title>Nulmeting</title> 
+        <link rel="stylesheet" type="text/css" href="stylecss.css">
     </head>
     <body>
         <div class="wrapper">
