created new branch for deliverable2

--- a/deliverable2.html
+++ b/deliverable2.html
@@ -8,10 +8,10 @@
     <body>
         <div class="wrapper">
             <section class="nav">
-                <a class="nav__link">Link</a>
-                <a class="nav__link">Link</a>
-                <a class="nav__link">Link</a>
-                <a class="nav__link">Link</a>
+                <div class="nav__box"><a class="nav__link">Link</a></div>
+                <div class="nav__box"><a class="nav__link">Link</a></div>
+                <div class="nav__box"><a class="nav__link">Link</a></div>
+                <div class="nav__box"><a class="nav__link">Link</a></div>
             </section>
 
             <section class="media">
