navigation bar has the right design

--- a/deliverable2.html
+++ b/deliverable2.html
@@ -8,12 +8,12 @@
     <body>
         <div class="wrapper">
             <section class="nav">
-                <div class="nav__box"><a class="nav__link">Link</a></div>
-                <div class="nav__box"><a class="nav__link">Link</a></div>
-                <div class="nav__box"><a class="nav__link">Link</a></div>
-                <div class="nav__box"><a class="nav__link">Link</a></div>
+                    <a href="" class="nav__link">Link</a>
+                    <a href="" class="nav__link">Link</a>
+                    <a href="" class="nav__link">Link</a>
+                    <a href="" class="nav__link">Link</a>
             </section>
-
+                    
             <section class="media">
                 <div class="media__field--black"> 
                     <img class="media__field-img" src="img/cube.png" alt="cube">
