add navigation bar

--- a/deliverable2.html
+++ b/deliverable2.html
@@ -5,10 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Delivereble 2</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <link rel="stylesheet" type="text/css" href="main.css" />
 </head>
 <body>
-    
+    <div class="wrapper">
+        <nav class="nav">
+            <img class="nav__logo" src="img/logo" alt="logo">
+            <ul class="nav__nav">
+                <li class="nav__link-block">
+                    <a class="nav__link" href="">products</a>
+                </li>
+                <li class="nav__link-block">
+                    <a class="nav__link" href="">idea box</a>
+                </li>
+                <li class="nav__link-block">
+                    <a class="nav__link" href="">news</a>
+                </li>
+                <li class="nav__link-block">
+                    <a class="nav__link" href="">materials</a>
+                </li>
+                <li class="nav__link-block">
+                    <a class="nav__link" href="">about us</a>
+                </li>
+                <li class="nav__link-block">
+                    <a class="nav__link" href="">contacts</a>
+                </li>
+                <li class="nav__link-block">
+                    <a class="nav__link" href="">login & registrasion</a>
+                </li>
+                <li class="nav__like">
+                    <img class="nav__like-button">
+                </li>
+            </ul>
+        </nav>
+    </div>
 </body>
 </html>
