added the header to the page

--- a/deliverable2.html
+++ b/deliverable2.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="wrapper">
-        <nav class="nav">
-            <img class="nav__logo" src="img/logo" alt="logo">
+        <nav class="page-nav">
+            <img class="nav__logo" src="img/logo.png" alt="logo">
             <ul class="nav__nav">
                 <li class="nav__link-block">
                     <a class="nav__link" href="">products</a>
@@ -34,10 +34,24 @@
                     <a class="nav__link" href="">login & registrasion</a>
                 </li>
                 <li class="nav__like">
-                    <img class="nav__like-button">
+                    <img class="nav__like-button" src="img/like.png" alt="like">
                 </li>
             </ul>
         </nav>
+
+        <header class="page-header">
+            <div class="header__info">
+                <h2 class="header__title">SPOT AND UPLIGHT</h2>
+                <p class="header__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam arcu nisl, viverra sed commodo sit amet, iaculis quis dui. Sed bibendum porta vulputate. In varius in turpis sit amet tincidunt. Donec at semper mauris. Sed vel est id purus molestie varius. </p>
+                <button type="button">LEARN MORE</button>
+                <img class="header__image" src="img/header-img.png" alt="lamp">
+                <img class="header__next" src="img/header-next.png" alt="next">
+            </div>
+        </header>
+
+        <section class="products">
+            
+        </section>
     </div>
 </body>
 </html>
