added the news letter section and the distributors section

--- a/index.html
+++ b/index.html
@@ -50,24 +50,24 @@
 		</header>
 
 		<section class="products">
-			<p class="products__text">new products</p>
+			<h2 class="products__title">new products</h2>
 			<span class="products__show">
 				<div class="products__item">
-					<img class="products__image" src="img/product1" alt="new product">
+					<img class="products__image" src="img/product1.png" alt="new product">
 					<footer class="products__footer">
 						<p class="products__name">gyro survace round warmdim</p>
 						<p class="products__brand">matt hvit</p>
 					</footer>
 				</div>
 				<div class="products__item">
-					<img class="products__image" src="img/product2" alt="new product">
+					<img class="products__image" src="img/product2.png" alt="new product">
 					<footer class="products__footer">
 						<p class="products__name">gyro survace round warmdim</p>
 						<p class="products__brand">matt sort</p>
 					</footer>
 				</div>
 				<div class="products__item">
-					<img class="products__image" src="img/product3" alt="new product">
+					<img class="products__image" src="img/product3.png" alt="new product">
 					<footer class="products__footer">
 						<p class="products__name">unicone warmdim</p>
 						<p class="products__brand">matt hvit</p>
@@ -77,6 +77,7 @@
 		</section>
 
 		<section class="idea">
+			<h2 class="idea__title">our idea book</h2>
 			<span>
 				<p class="idea__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur non est ipsum. Phasellus dictum, lorem vel scelerisque pharetra, est sapien luctus odio, at vehicula ante lacus sit amet dolor. Pellentesque quis urna orci. Nam vitae ipsum ultricies, consequat dui id, facilisis libero. Nunc eu est quam. Suspendisse nec sem vehicula, posuere felis non, lacinia nisi.</p>
 				<p class="idea__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur non est ipsum. Phasellus dictum, lorem vel scelerisque pharetra, est sapien luctus odio, at vehicula ante lacus sit amet dolor.</p>
@@ -102,49 +103,92 @@
 
 		<span class="gallery">
 			<div class="gallery__item">
-				<img class="gallery__image" src="img/gallery1" alt="Room example">
+				<img class="gallery__image" src="img/gallery1.png" alt="Room example">
 				<p class="gallery__description">gang</p>
 			</div>
 			<div class="gallery__item">
-				<img class="gallery__image" src="img/gallery2" alt="Room example">
+				<img class="gallery__image" src="img/gallery2.png" alt="Room example">
 				<p class="gallery__description">smart house</p>
 			</div>
 			<div class="gallery__item">
-				<img class="gallery__image" src="img/gallery3" alt="Room example">
+				<img class="gallery__image" src="img/gallery3.png" alt="Room example">
 				<p class="gallery__description">family room</p>
 			</div>
 			<div class="gallery__item">
-				<img class="gallery__image" src="img/gallery4" alt="Room example">
+				<img class="gallery__image" src="img/gallery4.png" alt="Room example">
 				<p class="gallery__description">living room</p>
 			</div>
 		</span>
 
 		<section class="news">
-				<p class="news_title">our latest news</p>
-				<span class="news__show">
-					<div class="news__item">
-						<img class="news__image" src="img/news1" alt="new product">
-						<footer class="news__footer">
-							<p class="news__name">nyheten warmdim led</p>
-							<p class="news__brand">dim til varmere hyggelys</p>
-						</footer>
-					</div>
-					<div class="news__item">
-						<img class="news__image" src="img/news2" alt="new product">
-						<footer class="news__footer">
-							<p class="news__name">ny inspirasjonsbrosjyre</p>
-							<p class="news__brand">folg lyset gjennom hvert rom i hytter og boliger</p>
-						</footer>
-					</div>
-					<div class="news__item">
-						<img class="news__image" src="img/news3" alt="new product">
-						<footer class="news__footer">
-							<p class="news__name">dimmer everything</p>
-							<p class="news__brand">smart universaldimmer</p>
-						</footer>
-					</div>
-				</span>
-			</section>
+			<h2 class="news_title">our latest news</h2>
+			<span class="news__show">
+				<div class="news__item">
+					<img class="news__image" src="img/news1.png" alt="new product">
+					<footer class="news__footer">
+						<p class="news__name">nyheten warmdim led</p>
+						<p class="news__brand">dim til varmere hyggelys</p>
+					</footer>
+				</div>
+				<div class="news__item">
+					<img class="news__image" src="img/news2.png" alt="new product">
+					<footer class="news__footer">
+						<p class="news__name">ny inspirasjonsbrosjyre</p>
+						<p class="news__brand">folg lyset gjennom hvert rom i hytter og boliger</p>
+					</footer>
+				</div>
+				<div class="news__item">
+					<img class="news__image" src="img/news3.png" alt="new product">
+					<footer class="news__footer">
+						<p class="news__name">dimmer everything</p>
+						<p class="news__brand">smart universaldimmer</p>
+					</footer>
+				</div>
+			</span>
+		</section>
+
+		<section class="email">
+			<h2 class="email__title">stay tunned</h2>
+			<p class="email__text">Enter your mail and we'll keep you posted with news and updates!</p>
+			<span class="email__field">
+				<input class="email__input" type="email" name="email" value="Enter your email">
+				<button type="submit" value="submit">SUBSCRIBE</button>
+			</span>
+		</section>
+
+		<section class="distributors">
+			<h2 class="distributors__title">distributors</h2>
+			<div class="distributors__display">
+				<div class="distributors__field">
+					<img class="distributor__logo" src="img/distributor1.png" alt="Distributor">
+				</div>
+				<div class="distributors__field">
+					<img class="distributor__logo" src="img/distributor2.png" alt="Distributor">
+				</div>
+				<div class="distributors__field">
+					<img class="distributor__logo" src="img/distributor3.png" alt="Distributor">
+				</div>
+				<div class="distributors__field">
+					<img class="distributor__logo" src="img/distributor4.png" alt="Distributor">
+				</div>
+				<div class="distributors__field">
+					<img class="distributor__logo" src="img/distributor5.png" alt="Distributor">
+				</div>
+				<div class="distributors__field">
+					<img class="distributor__logo" src="img/distributor6.png" alt="Distributor">
+				</div>
+				<div class="distributors__field">
+					<img class="distributor__logo" src="img/distributor7.png" alt="Distributor">
+				</div>
+				<div class="distributors__field">
+					<img class="distributor__logo" src="img/distributor8.png" alt="Distributor">
+				</div>
+			</div>
+		</section>
+
+		<section class="page__bottom">
+			<img class="botom__logo" src="img/logo.png" alt="luronze">
+		</section>
 	</div>
 </body>
 </html>
