added the bottom navigator and the footer

--- a/index.html
+++ b/index.html
@@ -188,7 +188,38 @@
 
 		<section class="page__bottom">
 			<img class="botom__logo" src="img/logo.png" alt="luronze">
+			<ul class="bottom__nav">
+				<li class="bottom__nav">
+					<a class="bottom__link" href="">products</a> 
+				</li>
+				<li class="bottom__nav">
+					<a class="bottom__link" href="">idea book</a> 
+				</li>
+				<li class="bottom__nav">
+					<a class="bottom__link" href="">news</a> 
+				</li>
+				<li class="bottom__nav">
+					<a class="bottom__link" href="">materials</a> 
+				</li>
+				<li class="bottom__nav">
+					<a class="bottom__link" href="">about us</a> 
+				</li>
+				<li class="bottom__nav">
+					<a class="bottom__link" href="">contacts</a> 
+				</li>
+				<li class="bottom__nav">
+					<a class="bottom__link" href="">sitemap</a> 
+				</li>
+				<li class="bottom__nav">
+					<a class="bottom__link" href="">legal & terms</a> 
+				</li>
+			</ul>
 		</section>
+
+		<footer class="page__footer">
+			<p class="page__footer-text">© 2017 Unilamp Norden AS. 992 846 070. Industriveien 11, 1481 Hagan</p>
+			<p class="page__footer-phone">Phone number: +47 67 494 770</p>
+		</footer>
 	</div>
 </body>
 </html>
