added the sidebar and some icons

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
 	<div class="wrapper">
+		<aside class="sidebar">
+			<img class="sidebar__search" src="img/search.svg" alt="search">
+			<img class="sidebar__expand" src="img/menu.svg" alt="menu">
+		</aside>
 		<nav class="page-nav">
 			<img class="nav__logo" src="img/logo.png" alt="logo">
 			<ul class="nav__nav">
@@ -34,7 +38,7 @@
 					<a class="nav__link" href="">login & registrasion</a>
 				</li>
 				<li class="nav__like">
-					<img class="nav__like-button" src="img/like.png" alt="like">
+					<img class="nav__like-button" src="img/like.svg" alt="like">
 				</li>
 			</ul>
 		</nav>
@@ -45,7 +49,7 @@
 				<p class="header__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam arcu nisl, viverra sed commodo sit amet, iaculis quis dui. Sed bibendum porta vulputate. In varius in turpis sit amet tincidunt. Donec at semper mauris. Sed vel est id purus molestie varius. </p>
 				<button type="button">LEARN MORE</button>
 				<img class="header__image" src="img/header-img.png" alt="lamp">
-				<img class="header__next" src="img/header-next.png" alt="next">
+				<img class="header__next" src="img/header-next.svg" alt="next">
 			</div>
 		</header>
 
